# aura

./: .gitignore  .gitmodules  GESTURE_IMPLEMENTATION_SUMMARY.md  GESTURE_INTEGRATION.md  INSTALL_GESTURES.md  PROJECT_DESCRIPTION.md  README.md  check_audio.py  draft_references.bib  gemini_live_test.py  main.tex  pyproject.toml  run_tests.sh  test_sam.py  testing.py
config/: composite_layup.yaml  default.yaml  game_demo.yaml
config/task_graphs/: generic_activity_dag.json  generic_activity_state.json
docs/: 06_gesture_recognition_update.md  ascii figures
examples/: simple_gesture_safety.py
genai_instructions/: Documentation.md  MASTER_PLAN.md  SETUP_COMPLETE.md  SPRINT_1_STATUS.md  SPRINT_STATUS_UPDATED.md
genai_instructions/agents/: 00_setup_agent.md  01_core_types_agent.md  02_monitor_interface_agent.md  03_config_agent.md  04_perception_agent.md  05_motion_agent.md  06_sound_agent.md  07_composite_layup_agent.md  13_game_agent.md
genai_instructions/demos/: composite_layup_demo.md
genai_instructions/docs/: gesture_monitor.md
genai_instructions/handoff/: 01_core_types.md  02_monitor_interface.md  03_config_system.md  04_perception_module.md  05_motion_prediction.md  06_sound_monitor.md
genai_instructions/validation/: test_checklists.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
scripts/: run_hand_layup_assistant.py  run_overlay_video.py  run_voice_robot_control.py  run_weigh_bottles_monitors.py  test_combined_monitors.py  test_combined_monitors_with_gesture.py  test_gesture_monitor.py  test_motion.py  test_motion_debug.py  test_perception.py  test_sound_monitor.py
sops/: composite_layup.json  sorting_task.json
src/aura/: __init__.py
tasks/hand_layup/: __init__.py  decision_engine.py  (+1 more)
tests/: conftest.py  test_intent.py  test_motion.py  test_scene_graph.py
(+120 files in other folders)
